--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-elements": "^2.3.2",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.8.3"
   },
   "devDependencies": {
