--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HybridOS'
+include ':react-native-android-installed-apps-unblocking'
+project(':react-native-android-installed-apps-unblocking').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-android-installed-apps-unblocking/android')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-webview'
